# youtube-rss-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 20260507_0625_a5e00424f473_initial_schema.py  20260507_1800_b7f2a3c1d890_add_youtube_topics_to_channels.py  20260507_2100_c3d4e5f6a7b8_add_include_shorts.py  20260508_1200_d4e5f6a7b8c9_rename_keycloak_sub_to_oidc_sub.py  20260522_1200_e5f6a7b8c9d0_allow_manual_subscriptions.py  20260616_1200_f6a7b8c9d0e1_add_video_shorts_cache.py  20260619_1200_a7b8c9d0e1f2_add_include_live.py
scripts/: check_shorts_live.py
tests/: test_feed_route.py  test_shorts_logic.py
youtube_subs_opml/: cli.py  oauth.py  opml.py  youtube.py
youtube_subs_opml/web/: auth.py  config.py  db.py  deps.py  main.py  models.py  templating.py
youtube_subs_opml/web/routes/: categories.py  channels.py  feed.py  opml.py  settings.py
youtube_subs_opml/web/services/: crypto.py  live.py  resolve.py  scheduler.py  shorts.py  sync.py
youtube_subs_opml/web/static/: style.css
youtube_subs_opml/web/templates/: base.html  categories.html  channels.html  login.html  settings.html
youtube_subs_opml/web/templates/partials/: category_add_channels.html  category_channels.html  category_list.html  channel_list.html  channel_row.html  kanban_board.html
