[project]
name = "youtube-subs-opml"
version = "0.1.0"
description = "Generate an OPML file from your YouTube subscriptions."
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "cryptography>=42",
    "python-multipart>=0.0.9",
]

[project.scripts]
youtube-subs-opml = "youtube_subs_opml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_subs_opml"]
